[package]
name = "small_uid"
authors = ["Isa Al-Ula"]
version = "0.2.5-alpha.0"
edition = "2024"
readme = "README.md"
description = "A 64 bit lexicographically sortable unique identifier implementation"
keywords = ["small", "ulid", "uuid", "sortable", "identifier"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/al-ula/small_uid"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64-url = "3.0.0"
rand = "0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0.218", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.rand]
version = "0.9.0"
default-features = false
features = ["std", "std_rng", "os_rng"]
