[workspace]
members = ["."]
default-members = ["."]
[package]
name = "small_uid"
authors = ["Isa Al-Ula"]
version = "0.3.0"
edition = "2024"
readme = "README.md"
description = "A 64 bit lexicographically sortable unique identifier implementation"
keywords = ["small", "ulid", "uuid", "sortable", "identifier"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/al-ula/small_uid"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64-url = "3.0.0"
rand = "0.9.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.rand]
version = "0.9.1"
default-features = false
features = ["std", "std_rng", "os_rng"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0.140"
